# pnk-linked-list

./: CMakeLists.txt  LICENSE
inc/pnk/: linked_list.h
src/: linked_list.c
tests/: init_test.c  insert_test.c
